--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 }
 body {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100vw;
@@ -19,12 +20,14 @@ body {
   background-color: lightgray;
 }
 .slider__after {
+  background-color: lightcoral;
   height: 512px;
   width: 1024px;
   background: no-repeat center center fixed;
   background-size: cover;
   position: absolute;
   z-index: 2;
+  background-color: bisque;
 }
 .slider__after:after {
   content: 'After';
@@ -34,7 +37,7 @@ body {
   left: 0;
   padding: 20px;
   color: white;
-  background: rgba(0, 0, 0, 0.1);
+  background: rgba(0, 0, 0, 0.527);
 }
 .slider__before {
   height: 512px;
@@ -43,6 +46,7 @@ body {
   background-size: cover;
   position: absolute;
   text-align: end;
+  background-color: aqua;
 }
 .slider__before:after {
   content: 'Before';
@@ -52,7 +56,7 @@ body {
   bottom: 0;
   padding: 20px;
   color: white;
-  background: rgba(0, 0, 0, 0.1);
+  background: rgba(0, 0, 0, 0.589);
 }
 .slider__resize {
   width: 5px;
@@ -79,4 +83,16 @@ body {
   font-size: 30px;
   right: 5px;
 }
+
+.inputs {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  font-size: 25px;
+}
+
+.file_after, .file_before {
+  padding-left: 10px;
+}
+
 /*# sourceMappingURL=style.css.map */
